--- a/drivers/mtd/Kconfig
+++ b/drivers/mtd/Kconfig
@@ -33,6 +33,28 @@ config MTD_TESTS
 	  should normally be compiled as kernel modules. The modules perform
 	  various checks and verifications when loaded.
 
+config MTD_CONCAT
+	tristate "MTD concatenating support"
+	help
+	  Support for concatenating several MTD devices into a single
+	  (virtual) one. This allows you to have -for example- a JFFS(2)
+	  file system spanning multiple physical flash chips. If unsure,
+	  say 'Y'.
+
+config MTD_PARTITIONS
+	bool "MTD partitioning support"
+	help
+	  If you have a device which needs to divide its flash chip(s) up
+	  into multiple 'partitions', each of which appears to the user as
+	  a separate MTD device, you require this option to be enabled. If
+	  unsure, say 'Y'.
+
+	  Note, however, that you don't need this option for the DiskOnChip
+	  devices. Partitioning on NFTL 'devices' is a different - that's the
+	  'normal' form of partitioning used on a block device.
+
+if MTD_PARTITIONS
+
 config MTD_REDBOOT_PARTS
 	tristate "RedBoot partition table parsing"
 	---help---
@@ -85,7 +107,7 @@ endif # MTD_REDBOOT_PARTS
 
 config MTD_CMDLINE_PARTS
 	bool "Command line partition table parsing"
-	depends on MTD = "y"
+	depends on MTD_PARTITIONS = "y" && MTD = "y"
 	---help---
 	  Allow generic configuration of the MTD partition tables via the kernel
 	  command line. Multiple flash resources are supported for hardware where
@@ -134,7 +156,8 @@ config MTD_AFS_PARTS
 
 	  You will still need the parsing functions to be called by the driver
 	  for your particular device. It won't happen automatically. The
-	  'physmap' map driver (CONFIG_MTD_PHYSMAP) does this, for example.
+	  'armflash' map driver (CONFIG_MTD_ARM_INTEGRATOR) does this, for
+	  example.
 
 config MTD_OF_PARTS
 	def_bool y
@@ -148,6 +171,8 @@ config MTD_AR7_PARTS
 	tristate "TI AR7 partitioning support"
 	---help---
 	  TI AR7 partitioning support
+
+endif # MTD_PARTITIONS
 
 comment "User Modules And Translation Layers"
 
@@ -307,27 +332,6 @@ config MTD_OOPS
 
 	  To use, add console=ttyMTDx to the kernel command line,
 	  where x is the MTD device number to use.
-
-config MTD_SWAP
-	tristate "Swap on MTD device support"
-	depends on MTD && SWAP
-	select MTD_BLKDEVS
-	help
-	  Provides volatile block device driver on top of mtd partition
-          suitable for swapping.  The mapping of written blocks is not saved.
-	  The driver provides wear leveling by storing erase counter into the
-	  OOB.
-
-config MTD_LAZYECCSTATS
-	bool "MTD Lazy ECC Stats collection support"
-	default y
-	help
-	  Normally bad block counts for ECC stats are collected at boot time.
-	  This option delays the badblock stats collection until ECCGETSTATS
-	  ioctl is invoked on the partition.
-
-	  This can significantly decrease boot times depending on the size of
-	  the partition.  If unsure, say 'N'.
 
 source "drivers/mtd/chips/Kconfig"
 
