--- a/drivers/video/msm/Makefile
+++ b/drivers/video/msm/Makefile
@@ -25,7 +25,7 @@ obj-$(CONFIG_FB_MSM_MDDI) += mddi.o
 # MDDI client/panel drivers
 #
 obj-$(CONFIG_FB_MSM_MDDI) += mddi_client_simple.o
-obj-$(CONFIG_FB_MSM_MDDI) += mddi_client_toshiba.o
+#obj-$(CONFIG_FB_MSM_MDDI) += mddi_client_toshiba.o
 obj-$(CONFIG_FB_MSM_MDDI_NOVTEC) += mddi_client_novb9f6_5582.o
 obj-$(CONFIG_FB_MSM_MDDI_EPSON) += mddi_client_epson.o
 
