almost fixed tty/serial

--- a/drivers/tty/serial/Kconfig
+++ b/drivers/tty/serial/Kconfig
@@ -1013,6 +1013,12 @@ config SERIAL_CORE
 config SERIAL_CORE_CONSOLE
 	bool
 
+config IMC_UART2DM_HANDSHAKE
+	bool "UART2DM handshake"
+	default n
+	help
+	  Enable UART2DM Handshaking for IMC modem
+
 config CONSOLE_POLL
 	bool
 
@@ -1307,6 +1313,18 @@ config SERIAL_MSM_HS
 
 	  Choose M here to compile it as a module. The module will be
 	  called msm_serial_hs.
+
+config SERIAL_MSM_HS_IMC
+        tristate "MSM UART High Speed: Serial Driver for IMC modem"
+        depends on ARCH_MSM
+        select SERIAL_CORE
+        help
+          If you have a machine based on MSM family of SoCs, you
+          can enable its onboard high speed serial port by enabling
+          this option.
+
+          Choose M here to compile it as a module. The module will be
+          called msm_serial_hs.
 
 config SERIAL_MSM_CLOCK_CONTROL
 	bool "Allow tty clients to make clock requests to msm uarts."
