--- a/NONAMER_defconfig
+++ b/NONAMER_defconfig
@@ -596,6 +596,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_GENLOCK is not set
 CONFIG_MTD=y
 # CONFIG_MTD_DEBUG is not set
+CONFIG_MTD_PARTITIONS=y
 # CONFIG_MTD_REDBOOT_PARTS is not set
 CONFIG_MTD_CMDLINE_PARTS=y
 # CONFIG_MTD_AFS_PARTS is not set
