Fixed Network, Bluetooth, WIFI

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -342,7 +342,7 @@ obj-$(CONFIG_ARCH_MSM8960) += mdm2.o mdm_common.o
 obj-$(CONFIG_MSM_RTB) += msm_rtb.o
 obj-$(CONFIG_MSM_CACHE_ERP) += cache_erp.o
 
-obj-$(CONFIG_MACH_BRAVO) += clock-pll.o board-qsd8x50.o board-bravo.o board-bravo-panel.o #board-bravo-wifi.o
+obj-$(CONFIG_MACH_BRAVO) += clock-pll.o board-qsd8x50.o board-bravo.o board-bravo-panel.o board-bravo-wifi.o
 obj-$(CONFIG_MACH_BRAVO) += board-bravo-microp.o board-bravo-mmc.o board-bravo-keypad.o
 obj-$(CONFIG_MACH_BRAVO) += htc_wifi_nvs.o htc_awb_cal.o
 obj-$(CONFIG_MACH_BRAVO) += board-bravo-tpa2018d1.o
