change export wifi driver to module

--- a/NONAMER_defconfig
+++ b/NONAMER_defconfig
@@ -1154,7 +1154,7 @@ CONFIG_NETDEV_10000=y
 CONFIG_WLAN=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY is not set
-CONFIG_BCM4329=y
+CONFIG_BCM4329=m
 CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"
 CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
 # CONFIG_BCMDHD is not set
